aster/tests/fail/bad-signature-use-3.astr
module bad-signature-use-3

attributes

  decorator foo(a) =
    id.signature
